kubernetes/apps/observability/checkmate/app/server-alias.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: observability
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: checkmate
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 52345
      targetPort: 52345
