kubernetes/apps/observability/checkmate/app/service-alias.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: observability
spec:
  type: ExternalName
  externalName: checkmate-server.observability.svc.cluster.local
  ports:
    - port: 5000
      targetPort: 3001
      protocol: TCP
