kubernetes/apps/observability/checkmate/app/tailscale-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app checkmate
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Observability"
    gethomepage.dev/name: "${GATUS_NAME}"
    gethomepage.dev/icon: "checkmate"
spec:
  defaultBackend:
    service:
      name: *app
      port:
        number: 52345
  ingressClassName: tailscale
  tls:
    - hosts:
        - *app
